--- a/printer.cfg
+++ b/printer.cfg
@@ -19,7 +19,7 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_450053000451313133353932-if00
 
 
 [save_variables]
-filename: ~/klipper_config/variables.cfg
+filename: ~/klipper/config/variables.cfg
 #   必须提供一个可以用来保存参数到磁盘的文件名。
 #   例如 . ~/variables.cfg
 
@@ -195,7 +195,6 @@ stealthchop_threshold: 0
 #   The extruder this stepper is synchronized to. If this is set to an
 #   empty string then the stepper will not be synchronized to an
 #   extruder. This parameter must be provided.
-
 #   See the "stepper" section for the definition of the above
 #   parameters.
 step_pin: PC13
@@ -213,13 +212,13 @@ rotation_distance: 22.6789511  #Bondtech 5mm Drive Gears
 gear_ratio: 50:10               
 microsteps: 32
 
-max_extrude_only_distance: 800.0
+max_extrude_only_distance: 900.0
 max_extrude_only_velocity: 70
 max_extrude_only_accel: 2500
 instantaneous_corner_velocity: 1.500
 max_extrude_cross_section: 50
 
-pressure_advance: 0.04 #0
+pressure_advance: 0.038 #0
 
 nozzle_diameter: 0.400
 filament_diameter: 1.750
@@ -238,7 +237,7 @@ sensor_pin: PF4
 min_temp: 10
 max_temp: 270
 max_power: 1.0
-min_extrude_temp: 170
+min_extrude_temp: 150
 
 
 ##  E0 on MOTOR6
@@ -260,23 +259,13 @@ spi_software_sclk_pin: PA5
 #sense_resistor: 0.110
 #stealthchop_threshold: 0
 
-
-
 ;[extruder]
 [extruder_stepper my_extra_stepper]
 extruder:
 step_pin: PE2
 dir_pin: !PE3
 enable_pin: !PD4
-##  Update value below when you perform extruder calibration
-##  If you ask for 100mm of filament, but in reality it is 98mm:
-##  rotation_distance = <previous_rotation_distance> * <actual_extrude_distance> / 100
-##  22.6789511 is a good starting point
-rotation_distance: 22.6789511   #Bondtech 5mm Drive Gears
-##  Update Gear Ratio depending on your Extruder Type
-##  Use 50:10 for Stealthburner/Clockwork 2
-##  Use 50:17 for Afterburner/Clockwork (BMG Gear Ratio)
-##  Use 80:20 for M4, M3.1
+rotation_distance: 22.6789511
 gear_ratio: 80:20               
 microsteps: 32
 full_steps_per_rotation: 200    #200 for 1.8 degree, 400 for 0.9 degree
@@ -365,7 +354,7 @@ speed: 10.0
 samples: 3
 samples_result: median
 sample_retract_dist: 3.0
-samples_tolerance: 0.006
+samples_tolerance: 0.06
 samples_tolerance_retries: 3
 
 activate_gcode:
@@ -533,9 +522,9 @@ z_positions:
    150, 348 #z1
    350, 18 #z2
 points:
-   40, 10
-   150, 225
-   260, 10
+   50, 20
+   150, 215
+   250, 20
    
 ## Uncomment below for 300mm build
 #z_positions:
@@ -560,8 +549,8 @@ points:
 
 ##--------------------------------------------------------------------
 
-speed: 150
-horizontal_move_z: 10
+speed: 160
+horizontal_move_z: 5
 retries: 3
 retry_tolerance: 0.075
 
@@ -594,7 +583,7 @@ runout_gcode:
 
     G92 E0                         ; zero the extruder
     G1 E-2.0 F3600                 ; retract filament
-    G1 E-150 F1000
+    G1 E-130 F1000
     SYNC_EXTRUDER_MOTION EXTRUDER=extruder MOTION_QUEUE=
     G92 E0
     
@@ -639,11 +628,10 @@ runout_gcode:
     
     G92 E0                         ; zero the extruder
     G1 E-2.0 F3600                 ; retract filament
-    G1 E-150 F1000
+    G1 E-130 F1000
     G92 E0
     
     SYNC_EXTRUDER_MOTION EXTRUDER=extruder MOTION_QUEUE=
-    
     M600 #calls a macro with the name M600 (so it can be called by slicers too)
     PARK_MACRO
     M117 Out of Filament
@@ -782,9 +770,9 @@ recover_velocity: 50 #allows pause resume functionality.
 
 [bed_mesh]
 speed: 150
-horizontal_move_z: 3
-mesh_min: 40, 10
-mesh_max: 260, 225
+horizontal_move_z: 5
+mesh_min: 50,20 ;40, 10
+mesh_max: 250,210 ;260, 225
 probe_count: 3, 3
 
 
@@ -814,14 +802,18 @@ initial_duration: 5
 gcode:
     M117 Welcome!
 
-    
-    
+[gcode_arcs]
+resolution: 0.1
+
+
+[exclude_object]
 
 #######################
 #PrusaSlicer Start G-code
 #START_PRINT BED=[first_layer_bed_temperature] HOTEND=[first_layer_temperature[initial_extruder]] INEXTRUDER=[initial_extruder]
 #######################
 [gcode_macro START_PRINT]
+;efault_parameter_PA: 0.04
 gcode:
 
     {% set svv = printer.save_variables.variables %}
@@ -831,23 +823,64 @@ gcode:
 
     M302;
     M140 S52;
-    ;M140 S{BED_TEMP}
-    G90;
-    
-    ;{% if INIT_EXTR==0 %}
-      ;ACTIVATE_EXTRUDER EXTRUDER=extruder
-    { action_respond_info("Printer start with T0") }
-    SYNC_EXTRUDER_MOTION EXTRUDER=my_extra_stepper MOTION_QUEUE=extruder
-    ;{% else %}
-      ;ACTIVATE_EXTRUDER EXTRUDER=extruder1
-      ;{ action_respond_info("Printer start with T1") }
-      ;SYNC_EXTRUDER_MOTION EXTRUDER=my_extra_stepper1 MOTION_QUEUE=extruder
-    ;{% endif %}
     
     SET_GCODE_VARIABLE MACRO=_start_state VARIABLE=state value=1
-    {% if printer.homed_axes != 'XYZ' %}
-        G28                         #Home All Axes
-    {% endif %}
+  {% if printer.homed_axes != 'XYZ' %}
+    G28             #Home All Axes
+  {% endif %}
+
+    ;M140 S{BED_TEMP}
+    ;M104 S150;
+    G90;
+    # Set and wait for nozzle to reach temperature
+    M104 S{EXTRUDER_TEMP}
+    ;SET_PRESSURE_ADVANCE ADVANCE={PA}
+    {% if INIT_EXTR==svv.currentextruder %}
+        {% if INIT_EXTR==0 %}
+            { action_respond_info("Printer start with T0") }
+            SYNC_EXTRUDER_MOTION EXTRUDER=my_extra_stepper MOTION_QUEUE=extruder
+            SYNC_EXTRUDER_MOTION EXTRUDER=extruder MOTION_QUEUE=extruder
+        {% elif INIT_EXTR==1  %}
+            { action_respond_info("Printer start with T1") }
+            SYNC_EXTRUDER_MOTION EXTRUDER=my_extra_stepper1 MOTION_QUEUE=extruder
+            SYNC_EXTRUDER_MOTION EXTRUDER=extruder MOTION_QUEUE=extruder
+        {% else %}
+            { action_respond_info("Printer start with T3") }
+            SYNC_EXTRUDER_MOTION EXTRUDER=my_extra_stepper MOTION_QUEUE=
+            SYNC_EXTRUDER_MOTION EXTRUDER=my_extra_stepper1 MOTION_QUEUE=
+            SYNC_EXTRUDER_MOTION EXTRUDER=extruder MOTION_QUEUE=extruder
+        {% endif %}
+    {% else %}
+        {% if INIT_EXTR !=3 %}
+            {% if svv.currentextruder==0 %}
+                SYNC_EXTRUDER_MOTION EXTRUDER=my_extra_stepper MOTION_QUEUE=extruder
+                SYNC_EXTRUDER_MOTION EXTRUDER=extruder MOTION_QUEUE=
+                { action_respond_info("Unloading T0") }
+                UNLOAD
+                SYNC_EXTRUDER_MOTION EXTRUDER=my_extra_stepper MOTION_QUEUE=
+                SYNC_EXTRUDER_MOTION EXTRUDER=my_extra_stepper1 MOTION_QUEUE=extruder
+                { action_respond_info("Loading T1") }
+                LOAD_FILAMENT
+                SYNC_EXTRUDER_MOTION EXTRUDER=extruder MOTION_QUEUE=extruder
+            {% elif svv.currentextruder==1 %}
+                SYNC_EXTRUDER_MOTION EXTRUDER=my_extra_stepper1 MOTION_QUEUE=extruder
+                SYNC_EXTRUDER_MOTION EXTRUDER=extruder MOTION_QUEUE=
+                { action_respond_info("Unloading T1") }
+                UNLOAD
+                SYNC_EXTRUDER_MOTION EXTRUDER=my_extra_stepper1 MOTION_QUEUE=
+                SYNC_EXTRUDER_MOTION EXTRUDER=my_extra_stepper MOTION_QUEUE=extruder
+                { action_respond_info("Loading T0") }
+                LOAD_FILAMENT
+                SYNC_EXTRUDER_MOTION EXTRUDER=extruder MOTION_QUEUE=extruder
+            {% endif %}
+        {% else %}
+                SYNC_EXTRUDER_MOTION EXTRUDER=my_extra_stepper MOTION_QUEUE=
+                SYNC_EXTRUDER_MOTION EXTRUDER=my_extra_stepper1 MOTION_QUEUE=
+                SYNC_EXTRUDER_MOTION EXTRUDER=extruder MOTION_QUEUE=extruder
+                { action_respond_info("Loading T3") }
+        {% endif %}  
+        
+    {% endif %} 
 
     ;Z_TILT_ADJUST;
 
@@ -864,19 +897,15 @@ gcode:
     #G0 X175 Y175 Z30 F3600
     #--------------------------------------------------------------------
 
-    #BED_MESH_PROFILE LOAD=default
-    G1 Z0.3 F1000;Move Z Axis up
+    BED_MESH_PROFILE LOAD=default
+    G1 Z0.5 F1000;Move Z Axis up
     
-    M109 S{EXTRUDER_TEMP}
-    
-
     ;SYNC_EXTRUDER_MOTION EXTRUDER=extruder MOTION_QUEUE=
     ;LOAD_FILAMENT
     G1 X305 Y8 F2000
-    SYNC_EXTRUDER_MOTION EXTRUDER=extruder MOTION_QUEUE=extruder
+    ;M109 S{EXTRUDER_TEMP}
     G92 E0
-    ;PUSH_FILAMENT_TO_HOTEND
-    G1 E50.0 F1000 ;PURGE AT START
+    G1 E130.0 F1000 ;PURGE AT START
     G1 X290 Y18
     G1 Y68 F2000;
     G1 Y18;
@@ -887,13 +916,13 @@ gcode:
     ;G1 F2100 E-1
     # Wait for bed to reach temperature
     {% if BED_TEMP > 52 %}
-        M109 S{ BED_TEMP }
+        M190 S{ BED_TEMP }
     {% else %}
         M140 S50
     {% endif %}
+    G90
     ;M190 S{BED_TEMP}
-    # Set and wait for nozzle to reach temperature
-    ;M104 S{EXTRUDER_TEMP}
+
 
 [gcode_macro END_PRINT]
 #   Use PRINT_END for the slicer ending script - please customise for your slicer of choice
@@ -909,8 +938,9 @@ gcode:
     M400                           ; wait for buffer to clear
     ;G92 E0                         ; zero the extruder
     G1 E-2.0 F1500                 ; retract filament
-    G1 E-41 F1000
+    G1 E-41.2 F1000 ;47.5
     G92 E0
+    CUTTING_FIL
     ;SYNC_EXTRUDER_MOTION EXTRUDER=extruder MOTION_QUEUE=
     
     ;UNLOAD
@@ -921,8 +951,9 @@ gcode:
     ;G0 X{x_safe} Y{y_safe} Z{z_safe} F20000  ; move nozzle to remove stringing
     G0 Z{z_safe} F500  ; move nozzle to remove stringing
     ;G0 X{th.axis_maximum.x//2} Y{th.axis_maximum.y - 2} F3600  ; park nozzle at rear
-    G0 X180 Y302 F3000
-    G0 X230 Y305 F1500
+    G0 X250 F3000
+    G0 Y305
+    G0 X230 F1500
     G0 X200
     G0 X300
     
@@ -930,14 +961,14 @@ gcode:
     
     M107                                     ; turn off fan
     M300
-    BED_MESH_CLEAR
+    ;BED_MESH_CLEAR
     RESTORE_GCODE_STATE NAME=STATE_PRINT_END
 
 [gcode_macro PARK_MACRO]
 gcode:
     {% set X = params.X|default(305)|float %}
-    {% set Y = params.Y|default(18)|float %}
-    {% set Z = params.Z|default(30)|float %}
+    {% set Y = params.Y|default(250)|float %}
+    {% set Z = params.Z|default(20)|float %}
     M117 PARKING...
     G91
     G1 E-3.14 F1500
@@ -949,7 +980,6 @@ gcode:
 [gcode_macro M600]
 gcode:
   PAUSE_MACRO
-  
   UNLOAD
 
   
@@ -993,7 +1023,7 @@ gcode:
   #G1 E-40 F2000
   #G1 E-120 F1500
   G4 P100
-  G1 E-680 F1500
+  G1 E-880 F1500
   G90
 
 [gcode_macro LOAD_FILAMENT]
@@ -1003,7 +1033,7 @@ gcode:
   #G1 E5.0 F800
   #G1 E120 F250
   G4 P100
-  G1 E700.0 F1500
+  G1 E880.0 F1500
   G90
 
 [gcode_macro PUSH_FILAMENT_TO_HOTEND]
@@ -1013,7 +1043,7 @@ gcode:
   #G1 E5.0 F800
   #G1 E120 F250
   G4 P100
-  G1 E150.0 F1000
+  G1 E130.0 F1000
   G90
 
 [gcode_macro _start_state]
@@ -1077,7 +1107,8 @@ gcode:  M117  CUT_FILAMENT
         ;G1 E-42 F1000 #Retract to cut position
         G90
         G0 X100 Y0 F3000 #ready
-        G0 X15 F3000 #cut!!!
+        G0 X13 F3000 #cut!!!
+        G4 P200
         G0 X305
         G0 X250 Y305 F3500
         G92 E0 
@@ -1096,15 +1127,12 @@ gcode:  M117  CUT_FILAMENT
 gcode:
     SAVE_VARIABLE VARIABLE=currentextruder VALUE='"0"'
     G91
-    G1 E-42 F1000 #Retract to cut position
+    G1 E-47 F1000 #Retract to cut position
     G90
     CUTTING_FIL
     SYNC_EXTRUDER_MOTION EXTRUDER=extruder MOTION_QUEUE=
     UNLOAD
     SYNC_EXTRUDER_MOTION EXTRUDER=my_extra_stepper1 MOTION_QUEUE=
-    ;SYNC_EXTRUDER_MOTION EXTRUDER=share_stepper MOTION_QUEUE=
-    ;ACTIVATE_EXTRUDER EXTRUDER=extruder
-    ;SYNC_EXTRUDER_MOTION EXTRUDER=share_stepper MOTION_QUEUE=extruder
     SYNC_EXTRUDER_MOTION EXTRUDER=my_extra_stepper MOTION_QUEUE=extruder
     LOAD_FILAMENT
     SYNC_EXTRUDER_MOTION EXTRUDER=extruder MOTION_QUEUE=extruder
@@ -1117,7 +1145,7 @@ gcode:
     SAVE_VARIABLE VARIABLE=currentextruder VALUE='"1"'
     {% if printer["gcode_macro _start_state"].state==0 %}
         G91
-        G1 E-42 F1000 #Retract to cut position
+        G1 E-47 F1000 #Retract to cut position
         G90
         CUTTING_FIL
         SYNC_EXTRUDER_MOTION EXTRUDER=extruder MOTION_QUEUE=
@@ -1132,26 +1160,24 @@ gcode:
         PUSH_FILAMENT_TO_HOTEND
         PURGE
     {% else %}
-        { action_respond_info("Unloading T0") }
-        CUTTING_FIL
-        SYNC_EXTRUDER_MOTION EXTRUDER=extruder MOTION_QUEUE=
-        UNLOAD
-        SYNC_EXTRUDER_MOTION EXTRUDER=my_extra_stepper MOTION_QUEUE=
-        { action_respond_info("loading T1") }
-        SYNC_EXTRUDER_MOTION EXTRUDER=my_extra_stepper1 MOTION_QUEUE=extruder
-        LOAD_FILAMENT
-        SYNC_EXTRUDER_MOTION EXTRUDER=extruder MOTION_QUEUE=extruder
-        PUSH_FILAMENT_TO_HOTEND
         SET_GCODE_VARIABLE MACRO=_start_state VARIABLE=state value=0
     {% endif %}
         
+[gcode_macro T2]
+gcode:
+    SAVE_VARIABLE VARIABLE=currentextruder VALUE='"2"'
+    {% if printer["gcode_macro _start_state"].state==1 %}
+        SET_GCODE_VARIABLE MACRO=_start_state VARIABLE=state value=0
+    {% endif %}
+
+
 [gcode_macro TT]
 gcode:
     {% set svv = printer.save_variables.variables %}
-    SAVE_VARIABLE VARIABLE=currentextruder VALUE='"3"'
-     M117 {svv.currentextruder}
-    { action_respond_info('svv.currentextruder') }
-
+    ;SAVE_VARIABLE VARIABLE=currentextruder VALUE='"2"'
+    { action_respond_info(svv.currentextruder) }
+    ;{ action_respond_info(state) }
+    
 ##  Thermistor Types
 ##   "EPCOS 100K B57560G104F"
 ##   "ATC Semitec 104GT-2"
@@ -1165,24 +1191,24 @@ gcode:
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
 #*# [probe]
-#*# z_offset = -0.48
+#*# z_offset = -0.50
 #*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*#     0.087187, -0.158438, 0.083750
-#*#     0.376250, -0.066875, -0.225313
-#*#     0.745312, -0.002500, -0.618750
+#*#     0.046562, -0.150938, 0.052500
+#*#     0.279687, -0.072813, -0.237188
+#*#     0.524687, 0.004687, -0.461563
 #*# tension = 0.2
-#*# min_x = 40.0
+#*# min_x = 50.0
 #*# algo = lagrange
 #*# y_count = 3
 #*# mesh_y_pps = 2
-#*# min_y = 10.0
+#*# min_y = 20.0
 #*# x_count = 3
-#*# max_y = 225.0
+#*# max_y = 210.0
 #*# mesh_x_pps = 2
-#*# max_x = 260.0
+#*# max_x = 250.0
 #*#
 #*# [extruder]
 #*# control = pid
