added chinese text for Dualcolor

--- a/DualColor_printer.cfg
+++ b/DualColor_printer.cfg
@@ -17,7 +17,7 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_450053000451313133353932-if00
 #restart_method: command
 ##--------------------------------------------------------------------
 
-
+#用于保存打印机关闭时最后一次所使用的挤出机
 [save_variables]
 filename: ~/klipper/config/variables.cfg
 #   必须提供一个可以用来保存参数到磁盘的文件名。
@@ -189,9 +189,10 @@ sense_resistor: 0.110
 stealthchop_threshold: 0
 
 [extruder]
-;[extruder_stepper share_stepper]
-;[extruder_stepper my_extra_stepper]
-;extruder: extruder
+#进程挤出机CW2, 另外的两个远程都会向它同步
+#[extruder_stepper share_stepper]
+#[extruder_stepper my_extra_stepper]
+#extruder: extruder
 #   The extruder this stepper is synchronized to. If this is set to an
 #   empty string then the stepper will not be synchronized to an
 #   extruder. This parameter must be provided.
@@ -242,8 +243,8 @@ min_extrude_temp: 150
 
 ##  E0 on MOTOR6
 ##  Make sure to update below for your relevant driver (2208 or 2209)
-;[tmc5160 extruder_stepper my_extra_stepper]
-;[tmc5160 extruder_stepper share_stepper]
+#[tmc5160 extruder_stepper my_extra_stepper]
+#[tmc5160 extruder_stepper share_stepper]
 [tmc5160 extruder]
 cs_pin: PE4
 run_current: 0.800
@@ -259,7 +260,7 @@ spi_software_sclk_pin: PA5
 #sense_resistor: 0.110
 #stealthchop_threshold: 0
 
-;[extruder]
+#第一个远程挤出机T0
 [extruder_stepper my_extra_stepper]
 extruder:
 step_pin: PE2
@@ -273,7 +274,7 @@ microsteps: 16 ;32
 
 ##  E0 on MOTOR6
 ##  Make sure to update below for your relevant driver (2208 or 2209)
-;[tmc5160 extruder]
+#[tmc5160 extruder]
 [tmc5160 extruder_stepper my_extra_stepper]
 cs_pin: PE1
 run_current: 0.800
@@ -283,8 +284,9 @@ spi_software_mosi_pin: PA7
 spi_software_miso_pin: PA6
 spi_software_sclk_pin: PA5
 
+#第二个远程挤出机T1
 [extruder_stepper my_extra_stepper1]
-;[extruder1]
+#[extruder1]
 extruder:
 step_pin: PE6
 dir_pin: !PA14
@@ -293,7 +295,7 @@ microsteps: 16
 #rotation_distance: 7.71 ;BMG
 rotation_distance: 34.406 ;MK8
 
-;[tmc2209 extruder1]
+#[tmc2209 extruder1]
 [tmc2209 extruder_stepper my_extra_stepper1]
 uart_pin: PD3
 interpolate: False
@@ -359,6 +361,8 @@ sample_retract_dist: 3.0
 samples_tolerance: 0.06
 samples_tolerance_retries: 3
 
+
+#tap调平时的温控
 activate_gcode:
     {% set PROBE_TEMP = 150 %}
     {% set MAX_TEMP = PROBE_TEMP + 25 %}
@@ -524,9 +528,9 @@ z_positions:
    150, 348 #z1
    350, 18 #z2
 points:
-   50, 20
-   150, 215
-   250, 20
+   80, 40
+   150, 200
+   220, 40
    
 ## Uncomment below for 300mm build
 #z_positions:
@@ -563,8 +567,10 @@ enable_force_move: True
 #   Set to true to enable FORCE_MOVE and SET_KINEMATIC_POSITION
 #   extended G-Code commands. The default is false.
 
-[filament_switch_sensor E1_sensor]
 
+
+#断料检测代码,此代码会直接用另一个耗材代替当前已经耗尽的耗材,实现无缝切换
+[filament_switch_sensor E1_sensor]
 #QUERY_FILAMENT_SENSOR SENSOR=E1_sensor
 
 #SET_FILAMENT_SENSOR SENSOR=E1_sensor ENABLE=[1]
@@ -614,8 +620,10 @@ event_delay: 3.0
 
 pause_delay: 0.5
 
-[filament_switch_sensor E0_sensor]
 
+
+#断料检测代码,此代码会直接用另一个耗材代替当前已经耗尽的耗材,实现无缝切换
+[filament_switch_sensor E0_sensor]
 #detection_length: 7.0
 #   The minimum length of filament pulled through the sensor to trigger
 #   a state change on the switch_pin
@@ -776,9 +784,9 @@ recover_velocity: 50 #allows pause resume functionality.
 [bed_mesh]
 speed: 150
 horizontal_move_z: 5
-mesh_min: 50,20 ;40, 10
-mesh_max: 250,210 ;260, 225
-probe_count: 3, 3
+mesh_min: 60,30 ;40, 10
+mesh_max: 240,200 ;260, 225
+probe_count: 5, 5
 
 
 #####################################################################
@@ -814,28 +822,28 @@ resolution: 0.1
 [exclude_object]
 
 #######################
+#内置在切片软件里的前置代码,目的是让软件在切片时自动把需要的初始信息传送给打印机
 #PrusaSlicer Start G-code
 #START_PRINT BED=[first_layer_bed_temperature] HOTEND=[first_layer_temperature[initial_extruder]] INEXTRUDER=[initial_extruder]
 #######################
 [gcode_macro START_PRINT]
 ;efault_parameter_PA: 0.04
 gcode:
-
     {% set svv = printer.save_variables.variables %}
-    {% set INIT_EXTR = params.INEXTRUDER|default(0)|int %}
+    {% set INIT_EXTR = params.INEXTRUDER|default(0)|int %} #打印机第一个需要启用的耗材序号0或1
     {% set EXTRUDER_TEMP = params.HOTEND|default(200)|float %}
     {% set BED_TEMP = params.BED|default(50)|float %}
 
-    SET_GCODE_VARIABLE MACRO=_start_state VARIABLE=state value=1
+    SET_GCODE_VARIABLE MACRO=_start_state VARIABLE=state value=1 #一次性赋值变量,目的是为了避开切片软件自动生成的初始T0或T1
     BED_MESH_PROFILE LOAD=default   
     
     M302;
     M140 S{ BED_TEMP };
     M109 S150; wait for hotend to reach the temperature
     
-	;{% if printer.homed_axes != 'XYZ' %}
-	G28	;						#Home All Axes
-	;{% endif %}
+    #{% if printer.homed_axes != 'XYZ' %}
+    G28 ;                       #Home All Axes
+    #{% endif %}
     
     G1 Z0.5 F1000;Move Z Axis up
     G90;
@@ -843,33 +851,34 @@ gcode:
     # Set and wait for nozzle to reach temperature
     M109 S{EXTRUDER_TEMP}
     G92 E0
-    ;M104 S{EXTRUDER_TEMP};Set Hotend Temperature
-    ;SET_PRESSURE_ADVANCE ADVANCE={PA}
+    #M104 S{EXTRUDER_TEMP};Set Hotend Temperature
+    #SET_PRESSURE_ADVANCE ADVANCE={PA}
+
+    #以下是逻辑判断,我的CW2上单独有一个可直接耗材通过耗材的口,所以我有T0,T1,T2三种选择.(T4是就是T0,测试用的,可以无视)
     {% if INIT_EXTR==0 %}
         M117 Printer start with T0
         SYNC_EXTRUDER_MOTION EXTRUDER=my_extra_stepper MOTION_QUEUE=extruder
-        SYNC_EXTRUDER_MOTION EXTRUDER=extruder MOTION_QUEUE=
-        LOAD_FILAMENT
+        SYNC_EXTRUDER_MOTION EXTRUDER=extruder MOTION_QUEUE=    #清空近程挤出机的同步关系,在供料阶段,近程挤出机不运动
+        LOAD_FILAMENT   #无论T0还是T1都需要从远端把料送到近端,所以,在更新好同步关系以后就执行这步送料
     {% elif INIT_EXTR==1 %}
         M117 Printer start with T1
         SYNC_EXTRUDER_MOTION EXTRUDER=my_extra_stepper1 MOTION_QUEUE=extruder
-        SYNC_EXTRUDER_MOTION EXTRUDER=extruder MOTION_QUEUE=
-        LOAD_FILAMENT
+        SYNC_EXTRUDER_MOTION EXTRUDER=extruder MOTION_QUEUE=    #清空近程挤出机的同步关系,在供料阶段,近程挤出机不运动
+        LOAD_FILAMENT   #无论T0还是T1都需要从远端把料送到近端,所以,在更新好同步关系以后就执行这步送料
     {% elif INIT_EXTR==2 %}
         M117 Printer start with T2
-        SYNC_EXTRUDER_MOTION EXTRUDER=my_extra_stepper1 MOTION_QUEUE=
-        SYNC_EXTRUDER_MOTION EXTRUDER=my_extra_stepper MOTION_QUEUE=
-        ;LOAD_FILAMENT
+        SYNC_EXTRUDER_MOTION EXTRUDER=my_extra_stepper1 MOTION_QUEUE= #清空远程挤出机1的同步关系
+        SYNC_EXTRUDER_MOTION EXTRUDER=my_extra_stepper MOTION_QUEUE= #清空远程挤出机0的同步关系
+        #LOAD_FILAMENT  #T2是近端直接打,无需从远端送料的步骤
     {% else %}
-        M117 Printer start with T4
+        M117 Printer start with T4 #测试代码,无视
         SYNC_EXTRUDER_MOTION EXTRUDER=my_extra_stepper MOTION_QUEUE=extruder
-        ;SYNC_EXTRUDER_MOTION EXTRUDER=my_extra_stepper1 MOTION_QUEUE=
+        #SYNC_EXTRUDER_MOTION EXTRUDER=my_extra_stepper1 MOTION_QUEUE=
     {% endif %}
-    ;G92 E0
-    SYNC_EXTRUDER_MOTION EXTRUDER=extruder MOTION_QUEUE=extruder
-    PUSH_FILAMENT_TO_HOTEND
-    ;G92 E0
-    PURGE
+
+    SYNC_EXTRUDER_MOTION EXTRUDER=extruder MOTION_QUEUE=extruder #此阶段耗材已经被推送到CW2近程挤出机的家门口,启用近程挤出机
+    PUSH_FILAMENT_TO_HOTEND #远近程挤出机同步把耗材推送到热端
+    PURGE #多挤出一段耗材以便于打印的颜色纯净
     
     ;Z_TILT_ADJUST;
     ##  Uncomment for for your size printer:
@@ -912,7 +921,9 @@ gcode:
     G92 E0               ; zero the extruder
     G1 E-20 F1000 ;40;45;47.5
     G92 E0
-    CUTTING_FIL
+    CUTTING_FIL #切料,然后把料抽到Cw2的进料口
+
+    #判断,只要不是T2,就触发回抽,把耗材抽到缓冲器的Y型送料口的位置
     {% if svv.currentextruder != '2' %}
          { action_respond_info('Not T2, need unloading') }
         SYNC_EXTRUDER_MOTION EXTRUDER=extruder MOTION_QUEUE=
@@ -967,11 +978,12 @@ gcode:
   PARK_MACRO
   SET_IDLE_TIMEOUT TIMEOUT=7200
 
+#清除残余耗材
 [gcode_macro PURGE]
 gcode:
   M117 PURGING..
   G91
-  G1 E55 F500
+  G1 E40 F500
   G1 E-0.2
   G0 Y15 F2500
   G0 X-60 F3000
@@ -982,11 +994,12 @@ gcode:
   G0 X30
   G90
 
+#清除更多的残余耗材
 [gcode_macro MORE_PURGE]
 gcode:
   M117 PURGING..
   G91
-  G1 E70.0 F500
+  G1 E55.0 F500
   G1 E-0.2
   G0 Y15 F2500
   G0 X-60 F3000
@@ -997,6 +1010,7 @@ gcode:
   G0 X30
   G90
 
+#卸载耗材
 [gcode_macro UNLOAD]
 gcode:
   M117  UNLOADING...
@@ -1008,6 +1022,7 @@ gcode:
   G1 E-815 F1500 ;780 NOT ENOUGH
   G90
 
+#装填耗材
 [gcode_macro LOAD_FILAMENT]
 gcode:
   M117  LOADING...
@@ -1018,6 +1033,7 @@ gcode:
   G1 E795.0 F1500 ;800
   G90
 
+#把装填好的耗材从近程挤出机位置推到热端口
 [gcode_macro PUSH_FILAMENT_TO_HOTEND]
 gcode:
   ;M117  LOADING...
@@ -1082,7 +1098,9 @@ gcode:  SET_PIN PIN=beeper VALUE=1
         G4 P200
         SET_PIN PIN=beeper VALUE=0
         G4 P100
-        
+
+
+#切料,然后把料抽到Cw2的进料口     
 [gcode_macro CUTTING_FIL]
 gcode:  M117  Cutting
         ;G91
@@ -1090,8 +1108,8 @@ gcode:  M117  Cutting
         ;G92 E0
         G90
         G0 X28 Y0 F2000 #ready
-        G0 X13 F500 #cut!!!
-        G0 X25 F3500
+        G0 X12 F1500 #cut!!!
+        G0 X25 F2500
         G1 E-5 F1500
         G0 X13
         G0 X25
@@ -1110,7 +1128,9 @@ gcode:  M117  Cutting
 
 [gcode_macro T0]
 gcode:
-    SAVE_VARIABLE VARIABLE=currentextruder VALUE='"0"'
+    SAVE_VARIABLE VARIABLE=currentextruder VALUE='"0"' #触发外部文件记录当前的挤出机号0
+
+    #判断语句,目的是为了避开切片软件自动生成的初始T0
     {% if printer["gcode_macro _start_state"].state==0 %}
         G92 E0
         G1 E-20 F1500 #Retract to cut position
@@ -1130,8 +1150,9 @@ gcode:
 
 [gcode_macro T1]
 gcode:
-    ;PARK_MACRO
-    SAVE_VARIABLE VARIABLE=currentextruder VALUE='"1"'
+    SAVE_VARIABLE VARIABLE=currentextruder VALUE='"1"' #触发外部文件记录当前的挤出机号1
+
+    #判断语句,目的是为了避开切片软件自动生成的初始T1
     {% if printer["gcode_macro _start_state"].state==0 %}
         G92 E0 
         G1 E-20 F1500 #Retract to cut position
@@ -1139,9 +1160,6 @@ gcode:
         SYNC_EXTRUDER_MOTION EXTRUDER=extruder MOTION_QUEUE=
         UNLOAD
         SYNC_EXTRUDER_MOTION EXTRUDER=my_extra_stepper MOTION_QUEUE=
-        ;SYNC_EXTRUDER_MOTION EXTRUDER=share_stepper MOTION_QUEUE=
-        ;ACTIVATE_EXTRUDER EXTRUDER=extruder
-        ;SYNC_EXTRUDER_MOTION EXTRUDER=share_stepper MOTION_QUEUE=extruder1
         SYNC_EXTRUDER_MOTION EXTRUDER=my_extra_stepper1 MOTION_QUEUE=extruder
         LOAD_FILAMENT
         SYNC_EXTRUDER_MOTION EXTRUDER=extruder MOTION_QUEUE=extruder
@@ -1151,6 +1169,7 @@ gcode:
     {% else %}
         SET_GCODE_VARIABLE MACRO=_start_state VARIABLE=state value=0
     {% endif %}
+
         
 [gcode_macro T2]
 gcode:
@@ -1159,7 +1178,7 @@ gcode:
         SET_GCODE_VARIABLE MACRO=_start_state VARIABLE=state value=0
     {% endif %}
 
-
+#测试代码
 [gcode_macro TT]
 gcode:
     {% set svv = printer.save_variables.variables %}
@@ -1183,24 +1202,26 @@ gcode:
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
 #*# [probe]
-#*# z_offset = -0.53
+#*# z_offset = -0.55
 #*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	-0.030938, -0.172813, -0.027813
-#*# 	0.263125, -0.046563, -0.249063
-#*# 	0.509375, -0.012500, -0.494688
+#*#       0.149687, 0.054687, 0.030312, 0.085312, 0.195937
+#*#       0.159375, 0.070000, 0.020625, 0.028125, 0.100625
+#*#       0.163125, 0.057500, -0.013750, -0.044063, -0.056563
+#*#       0.178125, 0.069375, -0.049063, -0.095000, -0.119688
+#*#       0.180625, 0.025000, -0.097813, -0.139375, -0.218750
 #*# tension = 0.2
-#*# min_x = 50.0
+#*# min_x = 60.0
 #*# algo = lagrange
-#*# y_count = 3
+#*# y_count = 5
 #*# mesh_y_pps = 2
-#*# min_y = 20.0
-#*# x_count = 3
-#*# max_y = 210.0
+#*# min_y = 30.0
+#*# x_count = 5
+#*# max_y = 200.0
 #*# mesh_x_pps = 2
-#*# max_x = 250.0
+#*# max_x = 240.0
 #*#
 #*# [extruder]
 #*# control = pid
