added G4 p200 for jingliao marco

--- a/AMS_LITE_Trident cfg/MZ_Ams_lite.cfg
+++ b/AMS_LITE_Trident cfg/MZ_Ams_lite.cfg
@@ -113,6 +113,7 @@ gcode:
                 wakeup WAKEUP={svvc}                                  ##唤醒近程挤出机与断电时的挤出机	
                 CUTTING_FIL                                           ##切刀
                 tuiliao OUT_NUM={svvc}                                ##退出上次耗材
+		G4 P200                                               ##留给断料检测传感器的检测延迟
                 jinliao IN_NUM={TOOL}                                 ##加载本次耗材
           {% else %}                                                  ##如果等于断电时的耗材情况,即不用触发耗材的切换程序,直接使用即可
                 wakeup WAKEUP={TOOL}                                  ##唤醒近程挤出机与tool挤出机
