new macro added for filament runout

--- a/AMS_LITE_Trident cfg/Var.cfg
+++ b/AMS_LITE_Trident cfg/Var.cfg
@@ -1,11 +1,16 @@
 
 [gcode_macro var]
 variable_temp: 175					#用于存储默认升温温度
+
+variable_tt0: 220 #T0默认温度
+variable_tt1: 198 #T1默认温度
+
 #variable_turn: 0 
 variable_tunnel: 2                  #用于存储当前的通道数量，从1开始,mm
 #variable_maxturn: 20	            #用于设定最大的进料尝试次数，超次报错，暂停打印
 
 variable_state:0					#用于存储打印机的状态（0是未处于打印任务阶段，1是处于打印任务阶段）
+variable_runout:0					#用于记录当前的状态以判定是否需要触发续料程序
 variable_motor:0
 
 #进料的三个阶段
