--- a/AMS_LITE_Trident cfg/macros.cfg
+++ b/AMS_LITE_Trident cfg/macros.cfg
@@ -161,6 +161,7 @@ gcode:
     {% set BED_TEMP = params.BED|default(50)|float %}
     
 	SET_GCODE_VARIABLE MACRO=var VARIABLE=state VALUE={1} ##更新为打印状态
+    SET_GCODE_VARIABLE MACRO=var VARIABLE=runout VALUE={0} ##恢复runout的初始值，防止打印开始时断料程序的误触发
     #SET_GCODE_VARIABLE MACRO=_start_state VARIABLE=state value=1 #一次性赋值变量,目的是为了避开切片软件自动生成的初始T0或T1
     #OFF_sfs
     BED_MESH_PROFILE LOAD=default   
