--- a/buffer.cfg
+++ b/buffer.cfg
@@ -1,71 +1,41 @@
-#示例远程同步挤出机
-
-[extruder_stepper t1]
-extruder:extruder
-#   这个步进电机将要同步到的挤出机名称
-#   如果被设为空字符串，这个步进电机将不会被同步到挤出机
-#   必须提供此参数
-step_pin:c1:PC1
-dir_pin:!c1:PC3
-enable_pin:!c1:PC7
-microsteps: 16
-# 主动带轮周长mm（BMG:23 MK8:33.500）
-rotation_distance: 22.5
-# 电机单圈脉冲数（1.8度电机:200，0.9度电机:400）
-full_steps_per_rotation: 200
-# 减速比（BMG齿轮比为50：17，输出轴在前，输入轴在后，MK8需要注释掉）
-gear_ratio: 50:17
-
 ####################################################################################
 #                   缓冲器-开始
-#  挤出机和同步挤出机需要校准，如果两个误差太大，适当调整[gcode_macro HCQ]内的加减1.5为适合自己的值
-#  在需要同步的地方加入HCQ M=1(一般是开始打印，恢复打印的宏里)   不需要的地方加入HCQ M=0(一般是暂停打印，取消打印，结束打印的宏里)，或者在周期循环内加入判断打印中开启，未打印关闭
+#  挤出机和同步挤出机需要校准，如果两个误差太大，适当调整[gcode_macro buffer]内的加减1.5为适合自己的值
+#  在需要同步的地方加入buffer_start(一般是开始打印，恢复打印的宏里),开启与关闭缓冲器建议直接改成sensor on/off
 ####################################################################################
-###详细请参考——>http://www.klipper3d.org/zh-Hant/G-Codes.html###
-[filament_switch_sensor HCQ]	#耗材开关传感器。支持使用开关传感器（如限位开关）进行耗材插入和耗尽检测。                        
+###参考木子小阳HCQ的原始代码###
+###修复bug###
+[filament_switch_sensor buffer]	#耗材开关传感器。支持使用开关传感器（如限位开关）进行耗材插入和耗尽检测。
 pause_on_runout: False		    #请注意, 如果 pause_on_runout 为 False 并且没有定义
-event_delay: 5.0                #事件之间的最小延迟时间（秒）,在这个时间段内触发的事件将被默许忽略。
-switch_pin:^c1:PD2                 #连接到检测开关的引脚。
+event_delay: 7.0                #事件之间的最小延迟时间（秒）,在这个时间段内触发的事件将被默许忽略。
+switch_pin:PG12                 #连接到检测开关的引脚。
+runout_gcode:
+    {% set svv = printer.save_variables.variables %}   ###获取断电时候的耗材的序号 “0、1、2、3”
+    Set_Rotation{svv.currentextruder} 
+    SET_EXTRUDER_ROTATION_DISTANCE EXTRUDER=t{svv.currentextruder} DISTANCE={svv.rd - 1.5}
+insert_gcode:
+    SET_EXTRUDER_ROTATION_DISTANCE EXTRUDER=t{svv.currentextruder} DISTANCE={svv.rd}
 
-[delayed_gcode HCQ]             #在设定的延迟上执行 gcode
-initial_duration: 0             #初始延迟的持续时间(以秒为单位)。如果设置为一个
-gcode:                          #当延迟时间结束后执行的G代码命令列表。支持G代码模板 http://www.klipper3d.org/zh-Hant/Status_Reference.html
-   {% if printer['filament_switch_sensor HCQ'].filament_detected == True %}   ##如果触发缓冲器(filament_detected == True)
-      {% set num = printer['gcode_macro HCQ'].rotation_distance_fast %}         ##则设置num等于gcode_macro HCQ中rotation_distance_fast值
-        {% if num != printer['gcode_macro HCQ'].last %}                            ##如果设置的 num 不等于gcode_macro HCQ最后的值last
-           SET_GCODE_VARIABLE MACRO=HCQ VARIABLE=last VALUE={num}                  ##则设置MACRO=HCQ中的变量，last的值为num
-           SET_EXTRUDER_ROTATION_DISTANCE EXTRUDER=t1 DISTANCE={num}               ##则设置电机T1的脉冲 DISTANCE为num
-        {% endif %}                                                             ##if结尾
-   {% else %}                                                                ##否则
-        {% set num = printer['gcode_macro HCQ'].rotation_distance_low %}        ##则设置num等于gcode_macro HCQ中rotation_distance_low值
-          {% if num != printer['gcode_macro HCQ'].last %}                         ##如果设置的 num 不等于gcode_macro HCQ最后的值last
-             SET_GCODE_VARIABLE MACRO=HCQ VARIABLE=last VALUE={num}               ##则设置MACRO=HCQ中的变量，last的值为num
-             SET_EXTRUDER_ROTATION_DISTANCE EXTRUDER=t1 DISTANCE={num}            #则设置电机T1的脉冲 DISTANCE为num
-          {% endif %}                                                           ##if结尾
-    {% endif %}                                                              ##if结尾
-    {% if printer['filament_switch_sensor HCQ'].enabled == True %}           ##设定灯丝感测器的开/关。如果ENABLE设定为0，耗材感测器将被禁用
-       UPDATE_DELAYED_GCODE ID=HCQ DURATION=5                                  ##更新HCQ的延时数据（DURATION）数据                         
-    {% endif %}
-
-[gcode_macro HCQ]
-variable_last: 0
-variable_rotation_distance_fast: 0
-variable_rotation_distance_low: 0
+[gcode_macro Set_Rotation0]
 gcode:
-   {% set m = params.M|default(0)|int %}          ##设置一个宏观变量M/默认值0/整数类型
-    {% set rotation_distance = printer.configfile.settings['extruder_stepper t1'].rotation_distance %}
-    #{% set rotation_distance = printer.save_variables.variables.T1_rotation_distance %}  #新版快乐兔http://www.klipper3d.org/zh-Hant/G-Codes.html
-    #{% set rotation_distance = printer.configfile.settings['manual_extruder_stepper gear_stepper'].rotation_distance %}  #旧版快乐兔
-     {% if m != 0 %}
-          SET_GCODE_VARIABLE MACRO=HCQ VARIABLE=rotation_distance_fast VALUE={rotation_distance-1.5}
-          SET_GCODE_VARIABLE MACRO=HCQ VARIABLE=rotation_distance_low VALUE={rotation_distance+1.5}
-          SET_GCODE_VARIABLE MACRO=HCQ VARIABLE=last VALUE=0    
-          SET_FILAMENT_SENSOR SENSOR=HCQ ENABLE=1                       #缓冲器的有效值为1，http://www.klipper3d.org/zh-Hant/G-Codes.html
-          UPDATE_DELAYED_GCODE ID=HCQ DURATION=5                        ##更新HCQ的延时数据（DURATION）数据
-      {% else %}
-          SET_FILAMENT_SENSOR SENSOR=HCQ ENABLE=0                        #缓冲器的有效值为0，http://www.klipper3d.org/zh-Hant/G-Codes.html
-          SET_EXTRUDER_ROTATION_DISTANCE EXTRUDER=t1 DISTANCE={rotation_distance}  #恢复原始值
-      {% endif %}
-####################################################################################
-#                   缓冲器-结束
-####################################################################################
+    {% set svv = printer.save_variables.variables %}
+    {% set original = printer.configfile.settings['extruder_stepper t0'].rotation_distance %}
+    SAVE_VARIABLE VARIABLE=rd VALUE={original}   #把最后一次激活的挤出的rotation记录在外部文件里
+
+[gcode_macro Set_Rotation1]
+gcode:
+    {% set svv = printer.save_variables.variables %}
+    {% set original = printer.configfile.settings['extruder_stepper t1'].rotation_distance %}
+    SAVE_VARIABLE VARIABLE=rd VALUE={original}
+
+[gcode_macro Set_Rotation2]
+gcode:
+    {% set svv = printer.save_variables.variables %}
+    {% set original = printer.configfile.settings['extruder_stepper t2'].rotation_distance %}
+    SAVE_VARIABLE VARIABLE=rd VALUE={original}
+
+[gcode_macro Set_Rotation3]
+gcode:
+    {% set svv = printer.save_variables.variables %}
+    {% set original = printer.configfile.settings['extruder_stepper t3'].rotation_distance %}
+    SAVE_VARIABLE VARIABLE=rd VALUE={original}
