--- a/AMS_LITE_Voron24 cfg/Filament_buffer.cfg
+++ b/AMS_LITE_Voron24 cfg/Filament_buffer.cfg
@@ -4,60 +4,54 @@
 #  在需要同步的地方加入buffer_start(一般是开始打印，恢复打印的宏里),开启与关闭缓冲器建议直接改成sensor on/off
 ####################################################################################
 ###参考木子小阳HCQ的原始代码###
-###注意：触发逻辑和原版相反###
-[delayed_gcode fastkeep]         
-initial_duration: 0             
-gcode:           
-   {% if printer['filament_switch_sensor buffer'].filament_detected == 0 %}   ##如果不触发缓冲器
-         {action_respond_info("fastkeeping......")}    ##代码调试行，调试完毕建议删除，这样不会有刷屏记录
-         UPDATE_DELAYED_GCODE ID=fastkeep DURATION=7                                    
-   {% else %}        
-         UPDATE_DELAYED_GCODE ID=fastkeep DURATION=0 
-         buffer M=0
-   {% endif %}                                                              
-
-[gcode_macro buffer]
-variable_rd_original:0
-gcode:
-    {% set m = params.M|default(0)|int %}          ##设置一个宏观变量M/默认值0/整数类型
+###修复bug###
+[filament_switch_sensor buffer]	#耗材开关传感器。支持使用开关传感器（如限位开关）进行耗材插入和耗尽检测。
+pause_on_runout: False		    #请注意, 如果 pause_on_runout 为 False 并且没有定义
+event_delay: 7.0                #事件之间的最小延迟时间（秒）,在这个时间段内触发的事件将被默许忽略。
+switch_pin:!PG12                 #连接到检测开关的引脚。
+runout_gcode:
     {% set svv = printer.save_variables.variables %}   ###获取断电时候的耗材的序号 “0、1、2、3”
-   
-     Set_Rotation{svv.currentextruder}  ##优先触发加速的挤出率赋值，如果检测到缓冲器已经被按下，再恢复原值
-     {% if m != 0 %}      
-          ##加速挤出代码在读取挤出速率时优先级始终高于Set_Rotation，这会导致最后一次的挤出率赋值不正确，20240220 by muimoon
-          ##目前强制buffer执行两次来解决这个问题
-          SET_EXTRUDER_ROTATION_DISTANCE EXTRUDER=t{svv.currentextruder} DISTANCE={rd_original - 1.5 } 
-          UPDATE_DELAYED_GCODE ID=fastkeep DURATION=5                        ##更新buffer的延时数据（DURATION）数据
-      {% else %} 
-          SET_EXTRUDER_ROTATION_DISTANCE EXTRUDER=t{svv.currentextruder} DISTANCE={rd_original}  #恢复原始值 
-      {% endif %}
+    Set_Rotation{svv.currentextruder} 
+    SET_EXTRUDER_ROTATION_DISTANCE EXTRUDER=t{svv.currentextruder} DISTANCE={svv.rd - 1.5}
+    {action_respond_info("read extruder %s"%(svv.rd))} 
+    {action_respond_info("set t %d fast %s"%(svv.currentextruder, svv.rd - 1.5))} 
+insert_gcode:
+    SET_EXTRUDER_ROTATION_DISTANCE EXTRUDER=t{svv.currentextruder} DISTANCE={svv.rd}
 
-##目前强制buffer执行两次来解决这个问题,启用buffer代码通过buffer_start来实现
+
 [gcode_macro buffer_start]
 gcode:
-      buffer M=0
-      buffer M=1
+      #buffer M=0
+      #buffer M=1
+      SET_FILAMENT_SENSOR SENSOR=buffer ENABLE=1
+
+[gcode_macro buffer_OFF]
+gcode:
+      SET_FILAMENT_SENSOR SENSOR=buffer ENABLE=0
 
 [gcode_macro Set_Rotation0]
 gcode:
+    {% set svv = printer.save_variables.variables %}
     {% set original = printer.configfile.settings['extruder_stepper t0'].rotation_distance %}
-    SET_GCODE_VARIABLE MACRO=buffer VARIABLE=rd_original VALUE={original}
+    SAVE_VARIABLE VARIABLE=rd VALUE={original}  #把最后一次激活的挤出的rotation记录在外部文件里
 
 [gcode_macro Set_Rotation1]
 gcode:
+    {% set svv = printer.save_variables.variables %}
     {% set original = printer.configfile.settings['extruder_stepper t1'].rotation_distance %}
-    SET_GCODE_VARIABLE MACRO=buffer VARIABLE=rd_original VALUE={original}
+    SAVE_VARIABLE VARIABLE=rd VALUE={original}
 
 [gcode_macro Set_Rotation2]
 gcode:
+    {% set svv = printer.save_variables.variables %}
     {% set original = printer.configfile.settings['extruder_stepper t2'].rotation_distance %}
-    SET_GCODE_VARIABLE MACRO=buffer VARIABLE=rd_original VALUE={original}
+    SAVE_VARIABLE VARIABLE=rd VALUE={original}
 
 [gcode_macro Set_Rotation3]
 gcode:
+    {% set svv = printer.save_variables.variables %}
     {% set original = printer.configfile.settings['extruder_stepper t3'].rotation_distance %}
-    SET_GCODE_VARIABLE MACRO=buffer VARIABLE=rd_original VALUE={original}
-
+    SAVE_VARIABLE VARIABLE=rd VALUE={original}
 
 [gcode_macro SEARCH_VARS]
 gcode:
