--- a/AMS_LITE_Voron24 cfg/Lite_haredware.cfg
+++ b/AMS_LITE_Voron24 cfg/Lite_haredware.cfg
@@ -10,15 +10,6 @@ serial:/dev/serial/by-id/usb-Klipper_rp2040_75556597254E5E53-if00
 #event_delay:3.0
 #switch_pin:b2:gpio17
 
-[filament_switch_sensor buffer]	#耗材开关传感器。支持使用开关传感器（如限位开关）进行耗材插入和耗尽检测。
-pause_on_runout: False		    #请注意, 如果 pause_on_runout 为 False 并且没有定义
-event_delay: 7.0                #事件之间的最小延迟时间（秒）,在这个时间段内触发的事件将被默许忽略。
-switch_pin:PG12                 #连接到检测开关的引脚。
-runout_gcode:
-    {% set state= printer['gcode_macro var']['state'] %}				##获取var中的state（处于打印任务时state=1，未处于打印任务时state=0）默认为0
-    {% if state == 1 %}  
-          buffer_start   #start bowden extruder calibration                                               
-    {% endif %} 
 
 
 #关闭编码器SET_FILAMENT_SENSOR SENSOR=BMQ ENABLE=0
@@ -88,7 +79,7 @@ stealthchop_threshold: 0
 [extruder_stepper t2]
 extruder:
 step_pin:   b2:gpio10
-dir_pin:    b2:gpio9
+dir_pin:    !b2:gpio9
 enable_pin: !b2:gpio15
 microsteps: 32
 #rotation_distance:22.5
